--- a/index.html
+++ b/index.html
@@ -35,10 +35,32 @@
     }
 
     label {
-      display: block;
+      display: flex;              /* NUEVO */
+      align-items: center;        /* NUEVO */
+      gap: 6px;                   /* NUEVO */
       font-size: 0.85rem;
       margin-bottom: 4px;
       opacity: 0.85;
+    }
+
+    .help-btn {
+      background: none;
+      border: 1px solid #f5c97a;
+      color: #f5c97a;
+      border-radius: 50%;
+      width: 18px;
+      height: 18px;
+      font-size: 0.75rem;
+      cursor: pointer;
+      padding: 0;
+    }
+
+    .help {
+      display: none;
+      font-size: 0.75rem;
+      opacity: 0.8;
+      margin-bottom: 8px;
+      line-height: 1.3;
     }
 
     input {
@@ -81,16 +103,44 @@
     <h1>Warframe Damage MVP</h1>
 
     <div class="card">
-      <label>Base Damage</label>
+
+      <label>
+        Base Damage
+        <button class="help-btn" onclick="toggleHelp('h-base')">?</button>
+      </label>
+      <div class="help" id="h-base">
+        Daño base del arma sin mods.  
+        Lo encuentras en el Arsenal → estadísticas del arma.
+      </div>
       <input id="base" type="number" value="100" step="0.1"/>
 
-      <label>Scaling Factor</label>
+      <label>
+        Scaling Factor
+        <button class="help-btn" onclick="toggleHelp('h-scaling')">?</button>
+      </label>
+      <div class="help" id="h-scaling">
+        Representa multiplicadores por mods de daño, facción o habilidades.
+        Ejemplo: Serration, Roar, Bane.
+      </div>
       <input id="scaling" type="number" value="3.0" step="0.1"/>
 
-      <label>Crit Factor</label>
+      <label>
+        Crit Factor
+        <button class="help-btn" onclick="toggleHelp('h-crit')">?</button>
+      </label>
+      <div class="help" id="h-crit">
+        Multiplicador de daño crítico.
+        Se obtiene del arma + mods (ej. Organ Shatter).
+      </div>
       <input id="crit" type="number" value="2.5" step="0.1"/>
 
-      <label>Global Multiplier</label>
+      <label>
+        Global Multiplier
+        <button class="help-btn" onclick="toggleHelp('h-global')">?</button>
+      </label>
+      <div class="help" id="h-global">
+        Multiplicadores finales como arcanos, buffs globales o sinergias.
+      </div>
       <input id="global" type="number" value="1.55" step="0.05"/>
 
       <button onclick="calculate()">Calcular</button>
@@ -105,6 +155,11 @@
   </div>
 
   <script>
+    function toggleHelp(id) {
+      const el = document.getElementById(id);
+      el.style.display = el.style.display === "block" ? "none" : "block";
+    }
+
     function calculate() {
       const base = parseFloat(document.getElementById("base").value);
       const scaling = parseFloat(document.getElementById("scaling").value);
@@ -113,7 +168,6 @@
 
       const baseDamage = base * scaling * global;
 
-      // rangos relativos (±10% como placeholder lógico)
       const minNormal = baseDamage * 0.9;
       const maxNormal = baseDamage * 1.1;
 
@@ -131,3 +185,4 @@
   </script>
 </body>
 </html>
+
