--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Warframe Damage Calculator (MVP)</title>
+  <title>Warframe Damage Calculator (Simple)</title>
 
   <style>
     body {
@@ -35,35 +35,15 @@
     }
 
     label {
-      display: flex;              /* NUEVO */
-      align-items: center;        /* NUEVO */
-      gap: 6px;                   /* NUEVO */
+      display: flex;
+      align-items: center;
+      gap: 6px;
       font-size: 0.85rem;
       margin-bottom: 4px;
       opacity: 0.85;
     }
 
-    .help-btn {
-      background: none;
-      border: 1px solid #f5c97a;
-      color: #f5c97a;
-      border-radius: 50%;
-      width: 18px;
-      height: 18px;
-      font-size: 0.75rem;
-      cursor: pointer;
-      padding: 0;
-    }
-
-    .help {
-      display: none;
-      font-size: 0.75rem;
-      opacity: 0.8;
-      margin-bottom: 8px;
-      line-height: 1.3;
-    }
-
-    input {
+    select, input {
       width: 100%;
       padding: 10px;
       border-radius: 8px;
@@ -85,11 +65,6 @@
       font-size: 1rem;
     }
 
-    .output {
-      margin-top: 12px;
-      font-size: 0.95rem;
-    }
-
     .range {
       margin-top: 6px;
       font-family: monospace;
@@ -98,91 +73,102 @@
 </head>
 
 <body>
-  <div class="container">
+<div class="container">
 
-    <h1>Warframe Damage MVP</h1>
+  <h1>Warframe Damage MVP</h1>
 
-    <div class="card">
+  <div class="card">
 
-      <label>
-        Base Damage
-        <button class="help-btn" onclick="toggleHelp('h-base')">?</button>
-      </label>
-      <div class="help" id="h-base">
-        Daño base del arma sin mods.  
-        Lo encuentras en el Arsenal → estadísticas del arma.
-      </div>
-      <input id="base" type="number" value="100" step="0.1"/>
+    <label>Tipo de arma</label>
+    <select id="weaponType">
+      <option value="gun">Primaria / Secundaria</option>
+      <option value="melee">Melee</option>
+    </select>
 
-      <label>
-        Scaling Factor
-        <button class="help-btn" onclick="toggleHelp('h-scaling')">?</button>
-      </label>
-      <div class="help" id="h-scaling">
-        Representa multiplicadores por mods de daño, facción o habilidades.
-        Ejemplo: Serration, Roar, Bane.
-      </div>
-      <input id="scaling" type="number" value="3.0" step="0.1"/>
+    <label>Tipo de ataque</label>
+    <select id="attackType">
+      <option value="normal">Normal</option>
+      <option value="heavy">Pesado</option>
+    </select>
 
-      <label>
-        Crit Factor
-        <button class="help-btn" onclick="toggleHelp('h-crit')">?</button>
-      </label>
-      <div class="help" id="h-crit">
-        Multiplicador de daño crítico.
-        Se obtiene del arma + mods (ej. Organ Shatter).
-      </div>
-      <input id="crit" type="number" value="2.5" step="0.1"/>
+    <label>Multiplicador de combo (solo melee)</label>
+    <select id="combo">
+      <option value="1">x1</option>
+      <option value="2">x2</option>
+      <option value="3">x3</option>
+      <option value="4">x4</option>
+      <option value="5">x5</option>
+      <option value="6">x6</option>
+      <option value="7">x7</option>
+      <option value="8">x8</option>
+      <option value="9">x9</option>
+      <option value="10">x10</option>
+      <option value="11">x11</option>
+      <option value="12">x12</option>
+    </select>
 
-      <label>
-        Global Multiplier
-        <button class="help-btn" onclick="toggleHelp('h-global')">?</button>
-      </label>
-      <div class="help" id="h-global">
-        Multiplicadores finales como arcanos, buffs globales o sinergias.
-      </div>
-      <input id="global" type="number" value="1.55" step="0.05"/>
+    <label>Daño mostrado en Arsenal</label>
+    <input id="damage" type="number" value="2450"/>
 
-      <button onclick="calculate()">Calcular</button>
-    </div>
+    <label>Probabilidad crítica (%)</label>
+    <input id="critChance" type="number" value="25"/>
 
-    <div class="card output" id="output">
-      <strong>Resultado</strong>
-      <div class="range" id="normal"></div>
-      <div class="range" id="critResult"></div>
-    </div>
+    <label>Multiplicador crítico</label>
+    <input id="critMult" type="number" value="2.0" step="0.1"/>
 
+    <button onclick="calculate()">Calcular</button>
   </div>
 
-  <script>
-    function toggleHelp(id) {
-      const el = document.getElementById(id);
-      el.style.display = el.style.display === "block" ? "none" : "block";
-    }
+  <div class="card">
+    <strong>Resultado estimado</strong>
+    <div class="range" id="normal"></div>
+    <div class="range" id="orange"></div>
+    <div class="range" id="red"></div>
+    <div class="range" id="heavy"></div>
+  </div>
 
-    function calculate() {
-      const base = parseFloat(document.getElementById("base").value);
-      const scaling = parseFloat(document.getElementById("scaling").value);
-      const crit = parseFloat(document.getElementById("crit").value);
-      const global = parseFloat(document.getElementById("global").value);
+</div>
 
-      const baseDamage = base * scaling * global;
+<script>
+function calculate() {
+  const dmg = parseFloat(damage.value);
+  const critMult = parseFloat(critMultInput.value || critMult.value);
+  const weaponType = document.getElementById("weaponType").value;
+  const attackType = document.getElementById("attackType").value;
+  const combo = parseFloat(document.getElementById("combo").value);
 
-      const minNormal = baseDamage * 0.9;
-      const maxNormal = baseDamage * 1.1;
+  const min = dmg * 0.9;
+  const max = dmg * 1.1;
 
-      const minCrit = minNormal * crit;
-      const maxCrit = maxNormal * crit;
+  const orangeMin = min * critMult;
+  const orangeMax = max * critMult;
 
-      document.getElementById("normal").textContent =
-        `Normal: ${minNormal.toFixed(1)} → ${maxNormal.toFixed(1)}`;
+  const redMin = orangeMin * critMult;
+  const redMax = orangeMax * critMult;
 
-      document.getElementById("critResult").textContent =
-        `Crit:   ${minCrit.toFixed(1)} → ${maxCrit.toFixed(1)}`;
-    }
+  document.getElementById("normal").textContent =
+    `Normal:      ${min.toFixed(0)} → ${max.toFixed(0)}`;
 
-    calculate();
-  </script>
+  document.getElementById("orange").textContent =
+    `Orange Crit: ${orangeMin.toFixed(0)} → ${orangeMax.toFixed(0)}`;
+
+  document.getElementById("red").textContent =
+    `Red Crit:    ${redMin.toFixed(0)} → ${redMax.toFixed(0)}`;
+
+  // Ataque pesado (solo melee)
+  if (weaponType === "melee" && attackType === "heavy") {
+    const heavyMin = min * combo;
+    const heavyMax = max * combo;
+
+    document.getElementById("heavy").textContent =
+      `Heavy Attack (x${combo}): ${heavyMin.toFixed(0)} → ${heavyMax.toFixed(0)}`;
+  } else {
+    document.getElementById("heavy").textContent = "";
+  }
+}
+
+calculate();
+</script>
 </body>
 </html>
 
