--- a/index.html
+++ b/index.html
@@ -69,6 +69,10 @@
       margin-top: 6px;
       font-family: monospace;
     }
+
+    .hidden {
+      display: none;
+    }
   </style>
 </head>
 
@@ -80,38 +84,39 @@
   <div class="card">
 
     <label>Tipo de arma</label>
-    <select id="weaponType">
+    <select id="weaponType" onchange="updateUI()">
       <option value="gun">Primaria / Secundaria</option>
       <option value="melee">Melee</option>
     </select>
 
-    <label>Tipo de ataque</label>
-    <select id="attackType">
-      <option value="normal">Normal</option>
-      <option value="heavy">Pesado</option>
-    </select>
+    <div id="meleeOptions" class="hidden">
 
-    <label>Multiplicador de combo (solo melee)</label>
-    <select id="combo">
-      <option value="1">x1</option>
-      <option value="2">x2</option>
-      <option value="3">x3</option>
-      <option value="4">x4</option>
-      <option value="5">x5</option>
-      <option value="6">x6</option>
-      <option value="7">x7</option>
-      <option value="8">x8</option>
-      <option value="9">x9</option>
-      <option value="10">x10</option>
-      <option value="11">x11</option>
-      <option value="12">x12</option>
-    </select>
+      <label>Tipo de ataque</label>
+      <select id="attackType">
+        <option value="normal">Normal</option>
+        <option value="heavy">Pesado</option>
+      </select>
+
+      <label>Multiplicador de combo</label>
+      <select id="combo">
+        <option value="1">x1</option>
+        <option value="2">x2</option>
+        <option value="3">x3</option>
+        <option value="4">x4</option>
+        <option value="5">x5</option>
+        <option value="6">x6</option>
+        <option value="7">x7</option>
+        <option value="8">x8</option>
+        <option value="9">x9</option>
+        <option value="10">x10</option>
+        <option value="11">x11</option>
+        <option value="12">x12</option>
+      </select>
+
+    </div>
 
     <label>Daño mostrado en Arsenal</label>
     <input id="damage" type="number" value="2450"/>
-
-    <label>Probabilidad crítica (%)</label>
-    <input id="critChance" type="number" value="25"/>
 
     <label>Multiplicador crítico</label>
     <input id="critMult" type="number" value="2.0" step="0.1"/>
@@ -130,12 +135,19 @@
 </div>
 
 <script>
-function calculate() {
-  const dmg = parseFloat(damage.value);
-  const critMult = parseFloat(critMultInput.value || critMult.value);
+function updateUI() {
   const weaponType = document.getElementById("weaponType").value;
-  const attackType = document.getElementById("attackType").value;
-  const combo = parseFloat(document.getElementById("combo").value);
+  const meleeOptions = document.getElementById("meleeOptions");
+
+  meleeOptions.classList.toggle("hidden", weaponType !== "melee");
+}
+
+function calculate() {
+  const dmg = parseFloat(document.getElementById("damage").value);
+  const critMult = parseFloat(document.getElementById("critMult").value);
+  const weaponType = document.getElementById("weaponType").value;
+  const attackType = document.getElementById("attackType")?.value;
+  const combo = parseFloat(document.getElementById("combo")?.value || 1);
 
   const min = dmg * 0.9;
   const max = dmg * 1.1;
@@ -155,7 +167,6 @@ function calculate() {
   document.getElementById("red").textContent =
     `Red Crit:    ${redMin.toFixed(0)} → ${redMax.toFixed(0)}`;
 
-  // Ataque pesado (solo melee)
   if (weaponType === "melee" && attackType === "heavy") {
     const heavyMin = min * combo;
     const heavyMax = max * combo;
@@ -167,6 +178,7 @@ function calculate() {
   }
 }
 
+updateUI();
 calculate();
 </script>
 </body>
