--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ button {
 <body>
 <div class="container">
 
-<h1>Warframe Damage MVP</h1>
+<h1>Warframe Damage Per shot/hit </h1>
 
 <div class="card">
 
